# document-builder-template

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/initial/: manifest.yaml
src/initial/docs/: introduction.md  methods.md  results.md
src/manuscript/: manifest.yaml
src/manuscript/docs/: discussion.md  introduction.md  methods.md  results.md
src/manuscript/tables/: subgroup_summary.csv
src/proposal/: manifest.yaml  references.bib
src/proposal/docs/: 0_cover.md  1_introduction.md  2_aims.md  3_approach.md  4_plan.md  5_impact.md
src/proposal/tables/: milestones.csv  risk_register.tsv
styles/: article.css  article.yaml
templates/: article.docx  proposal.tex
